update intro example

--- a/experiments/intro_example.ipynb
+++ b/experiments/intro_example.ipynb
@@ -32,7 +32,7 @@
     "DGP: run a contextual bandit experiment with a Thompson sampling agent, collecting $1000$ observations for one simulation.  \n",
     "- context space $\\{x_0, x_1, x_2, x_3, x_4\\}$ with probability $[0.6, 0.1, 0.1, 0.1]$. \n",
     "- arms: $\\{w_0, w_1, w_2, w_3, w_4\\}$ \n",
-    "- potential outcomes of $x_i$ assigned to $w_j$: $0.5\\cdot\\one_{i=j} + \\mathcal{N}(0,1)$\n",
+    "- potential outcomes of $x_i$ assigned to $w_j$: $0.5\\cdot 1_{i=j} + \\mathcal{N}(0,1)$\n",
     "- agent: Thompson sampling with floor $0.2t^{-0.7}$\n",
     "\n",
     "Target policy: always assigning treatment $W_t=w_0$.\n",
